--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ body {
 
 .navbar {
     display: flex;
-    border: 1px solid red;
 }
 
 .nav-left {
@@ -36,7 +35,6 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid #fff;
     column-gap: 1.8rem;
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -49,7 +47,7 @@ body {
 
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 500;
+    font-weight: 600;
     font-style: normal;
     font-size: .9rem;
 
@@ -72,7 +70,6 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid #fff;
     column-gap: 1.1rem;
 }
 
@@ -80,17 +77,23 @@ body {
     color: var(--text);
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 500;
+    font-weight: 600;
     font-style: normal;
     font-size: .9rem;
 }
 
 .nav-right .icon i {
     margin-right: .5rem;
-    border: 1px solid red;
 }
 
-.btn {
-    background: white;
-    color: #000000;
+.signUp {
+    color: #000;
+    background: var(--text);
+    padding: .4rem .6rem;
+    border-radius: 3rem;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size: .9rem;
 }
