--- a/style.css
+++ b/style.css
@@ -97,3 +97,77 @@ body {
     font-style: normal;
     font-size: .9rem;
 }
+
+.left-box {
+    background: red;
+    width: 50%;
+    height: calc(100% - 7%);
+    display: flex;
+    align-items: center;
+    justify-content: end;
+
+}
+
+.wrapper-left-box {
+    border: 1px solid white;
+    height: 100%;
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    padding-top: 14rem;
+    padding-left: 2rem;
+}
+
+.header {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 3rem;
+}
+
+.short-header {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    color: rgb(229, 229, 229);
+    padding-top: 1.5rem;
+    letter-spacing: .01px;
+    font-size: 1rem;
+}
+
+.short-header+form {
+    border: 1px solid green;
+    display: flex;
+    flex-direction: column;
+    height: 40%;
+    width: 70%;
+    /* row-gap: 1rem; */
+}
+
+form>input {
+    width: 100%;
+    border: 1px solid silver;
+    height: 20%;
+    border-radius: .5rem;
+    padding-left: 2.1rem;
+    font-size: 1.1rem;
+}
+
+form>input {
+    margin-bottom: .8rem;
+}
+
+.header-form-btn {
+    margin-top: 1rem;
+    padding: 1.2rem 1.2rem;
+    width: 33%;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    border-radius: .5rem;
+    font-size: 1rem;
+}
