--- a/style.css
+++ b/style.css
@@ -214,12 +214,42 @@ form>input {
     height: 50%;
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 500;
+    font-weight: 600;
     font-style: normal;
-    font-size: 2.1rem;
-    padding-top: 3rem;
+    font-size: 2rem;
+    padding-top: 2.2rem;
+
+}
+
+.box i {
+    padding-left: 1rem;
+    font-size: 2rem;
 }
 
 .in-box {
     border: 1px solid blue;
+    padding-bottom: 4rem;
+    margin-right: 2rem;
+    padding-top: 2rem;
+    width: 86%;
 }
+
+.pos-1 {
+    position: relative;
+    left: 22rem;
+}
+
+.pos-2 {
+    position: relative;
+    left: 17rem;
+}
+
+.pos-3 {
+    position: relative;
+    left: 3rem;
+}
+
+/* 
+.temp {
+    padding-bottom: 6rem;
+} */
