--- a/style.css
+++ b/style.css
@@ -275,7 +275,83 @@ form>input {
 
 }
 
-/* 
-.temp {
-    padding-bottom: 6rem;
-} */
+.second-page {
+    display: flex;
+}
+
+.wrapper-left {
+    background: red;
+    width: 50vw;
+    padding-top: 4rem;
+    padding-left: 23.5rem;
+
+}
+
+.inner-wrapper {
+    width: 34rem;
+    height: 34rem;
+
+
+}
+
+.inner-wrapper img {
+    width: 100%;
+    height: 100%;
+}
+
+.wrapper-right {
+    background: yellow;
+    width: 50%;
+}
+
+.inner-wrapper-text {
+    background: lime;
+    width: 60%;
+    padding-top: 10rem;
+    padding-left: 6rem;
+
+}
+
+.second-page-header {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 3rem;
+    margin-bottom: 2rem;
+}
+
+.second-page-para {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    margin-bottom: 1.5rem;
+    font-size: 1rem;
+}
+
+.second-pagebtn {
+    padding: 1rem 1.5rem;
+    border-radius: .5rem;
+    font-family: "Noto Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
+    background: #000;
+    color: white;
+    font-size: 1rem;
+}
+
+.second-page-link {
+    margin-left: 1.5rem;
+    font-family: "Noto Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
+    color: black;
+    font-size: 1rem;
+}
