--- a/style.css
+++ b/style.css
@@ -512,3 +512,82 @@ form>input {
     color: black;
     font-size: 1rem;
 }
+
+.footer {
+    background: #000;
+    color: #fff;
+    padding-top: 8rem;
+    padding-left: 20rem;
+    margin-top: 5rem;
+    display: flex;
+}
+
+.col1 {
+    width: 15%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    row-gap: 4rem;
+
+}
+
+.lower {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    font-family: "Noto Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
+}
+
+.upper {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+    font-family: "Noto Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
+    font-size: 1rem;
+}
+
+.upper .header {
+    font-size: 1.5rem;
+    font-family: "Noto Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
+}
+
+.item1 {
+    font-family: "Noto Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
+    margin-bottom: 1.5rem;
+}
+
+.col2 {
+    background: red;
+    margin-left: 8rem;
+    margin-top: 9rem;
+    font-family: "Noto Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
+    font-size: 1rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+}
